force-app/main/default/objects/QuickBridge_Admin_Audit__c/QuickBridge_Admin_Audit__c.object-meta.xml
<CustomObject>
    <description>Audit trail for QuickBridge admin and control-plane changes.</description>
    <label>QuickBridge Admin Audit</label>
    <nameField>
        <displayFormat>QBA-{000000}</displayFormat>
        <label>Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QuickBridge Admin Audits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>