force-app/main/default/objects/QuickBridge_Admin_Audit__c/fields/Actor_User__c.field-meta.xml
<CustomField>
    <fullName>Actor_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actor User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>QuickBridge Admin Audits</relationshipLabel>
    <relationshipName>QuickBridge_Admin_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>