force-app/main/default/objects/QuickBridge_Admin_Audit__c/fields/Connector_Key__c.field-meta.xml
<CustomField>
    <fullName>Connector_Key__c</fullName>
    <label>Connector Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>